# CICD

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_main.py
