[project]
name = "cicd"
version = "0.1.0"
description = ""
authors = [
    {name = "phucpham09",email = "phuc_ph@theinfitech.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.4,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]
packages = [{include = "cicd", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
